# 03_Knowledge_Base_QA

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_colab.txt
Report and Slides/: Report.tex  Slides.tex
app/: gradio_app.py
configs/: infer.yaml  train.yaml
data/: README.md
deploy/: README_HF_SPACE.md
docs/: DESIGN_BRIEF.md  agent_architecture.md  architecture.md  continual_learning_monitoring.md  data_card.md  data_description.md  deployment.md  ethics_statement.md  faithfulness_evaluation.md  model_card.md  model_selection.md  privacy_robustness.md  problem_definition.md  project_plan.md  slide_deck_outline.md
models/: README.md
notebooks/: COLAB_GUIDE.md  KBQA_Colab_Training_H100_AUTOPILOT.ipynb
sample_data/: README.md  questions.txt  sample_docs.jsonl
scripts/: download_data.sh  run_autopilot.sh  train.sh
src/kbqa/: __init__.py  cli.py  config.py  logging_utils.py
src/kbqa/agent/: __init__.py  llm_orchestrator.py  policy.py  rag_agent.py  state.py  tools.py
src/kbqa/analysis/: __init__.py  error_analysis.py  faithfulness.py  latency.py
src/kbqa/api/: __init__.py  app_combined.py  dependencies.py  main.py  schemas.py  ui.py
src/kbqa/automation/: __init__.py  autopilot.py
src/kbqa/autoreport/: artifact_loader.py  charts.py  report_pdf.py  slides_pptx.py
src/kbqa/data/: __init__.py  chunking.py  corpus.py  dataset.py  download_dataset.py  preprocessing.py  samples.py
src/kbqa/grading/: checklist.py
src/kbqa/index/: __init__.py  vector_store.py
src/kbqa/models/: __init__.py  baseline_bm25.py  model_registry.py  reader_extractive.py  reader_generative.py  reranker.py  retriever.py
src/kbqa/monitoring/: __init__.py  drift_report.py
src/kbqa/training/: __init__.py  evaluate.py  train_generator.py  train_reader.py  train_retriever.py  tune.py
tests/: test_agent_bm25.py  test_index_and_chunking.py  test_policy_config.py
