[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbqa"
version = "1.0.0"
description = "Knowledge Base Question-Answering System — a production, agentic RAG-over-documents NLP system."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Le Dinh Minh Quan" }]
keywords = ["nlp", "rag", "question-answering", "retrieval", "faiss", "agent", "fastapi"]

# Core deps: enough to import the package and run the agent + BM25 retrieval + API
# on a clean machine. Heavy ML libs live in the `ml` extra so we never pin a
# torch/CUDA version that conflicts with Colab.
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
  "rank-bm25>=0.2.2",
  "pydantic>=2.5",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
  "torch>=2.2",
  "transformers>=4.46",
  "datasets>=2.20",
  "accelerate>=0.34",
  "sentence-transformers>=3.0",
  "sentencepiece>=0.1.99",
  "evaluate>=0.4",
]
search = ["faiss-cpu>=1.8"]
report = ["reportlab>=4.1", "python-pptx>=0.6.23", "matplotlib>=3.8"]
ui = ["gradio>=4.44"]
tune = ["optuna>=3.6"]
llm = ["anthropic>=0.39"]
metrics = ["prometheus-client>=0.20"]
dev = ["pytest>=8.0", "ruff>=0.5"]
all = [
  "torch>=2.2", "transformers>=4.46", "datasets>=2.20", "accelerate>=0.34",
  "sentence-transformers>=3.0", "sentencepiece>=0.1.99", "evaluate>=0.4",
  "faiss-cpu>=1.8", "reportlab>=4.1", "python-pptx>=0.6.23", "matplotlib>=3.8",
  "gradio>=4.44", "optuna>=3.6", "anthropic>=0.39", "prometheus-client>=0.20",
]

[project.scripts]
kbqa = "kbqa.cli:main"

[project.urls]
Homepage = "https://github.com/<your-username>/kbqa"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kbqa = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py39"
